assets/css/style.css
@import url("reset.css");
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
   --main-black-color: #333;
   --main-orange-color: #F58220;
   --main-white-color: #fff; 
   --light-grey-color1: #f0f0f0;
   --light-grey-color2: #ababab;
   --orange-hover-color: #faa65d;
}


html {
   scroll-behavior: smooth;
}

body {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
   gap: 25px;
   background-color: var(--light-grey-color1);
   font-family: Roboto, sans-serif;
   font-size: 16px;
   height: 100%;
}

/* Header styling */
header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
   width: 100%;
   background-color: var(--main-black-color);
   color: var(--main-white-color);
}
.page-title > h1 {
   font-size: 1.6rem;
   font-weight: 500;
}

#main-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   gap: 15px;
   width: 95%;
   height: 100%;
   padding: 20px;
   border-radius: 4px;
   background-color: var(--main-white-color);
   overflow: hidden;
   filter:drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
}

/* Search Section styling */
#search-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 15px;
   padding: 20px 0px;
   width: 100%;
}
.search-bar-wrapper {
   position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   /* padding: 20px; */
   width: 55%;
}
#search-input {
   background-color: var(--light-grey-color1);
   padding-right: 140px;
   width: 100%;
   height: 44px;
}
#search-btn {
   position: absolute;
   top: 0px;
   right: 0px;
   font-size: 16px;
   font-weight: 600;
   color: var(--main-white-color);
   background-color: var(--main-orange-color);
   border: none;
   padding: 10px;
   border-radius: 0px 2px 2px 0px;
   width: 125px;
   cursor: pointer;
}
#search-btn:hover {
   background-color: var(--orange-hover-color);
   transition: all 0.3s ease-in-out;
}
#new-form-btn {
   font-size: 16px;
   font-weight: 600;
   color: var(--main-white-color);
   background-color: var(--main-orange-color);
   border: none;
   padding: 10px;
   border-radius: 2px;
   width: 240px;
   cursor: pointer;
}
#new-form-btn:hover {
   background-color: var(--orange-hover-color);
   transition: all 0.3s ease-in-out;
}
/* End search section styling */

/* Table styling */
#table-container {
   display: flex;   
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
   height: 100%;
   max-height: 650px;
   background-color: var(--light-grey-color1);
   overflow: scroll;
}
table {
   border-collapse: collapse;
   width: 100%;
   /* height: 650px; */
   padding: 0 20px;
   background-color: var(--main-white-color);
}
thead {
   position: sticky;
   top: 0;
   filter: drop-shadow(0px 1px 5px grey);
}
th {
   padding: 18px 10px;
   background-color: var(--main-white-color);
   cursor: pointer;
}
#data-table {
   width: 100%;
}
tr:nth-child(odd) {
   background-color: var(--light-grey-color1);
}
td {
   padding: 20px 10px;
}
#entry-log-num-header-col, .entry-log-num-col {
   display: none;
}
.col-th-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 5px;
}
.table-header-text {
   color: grey;
   font-weight: 600;
}
.sort-icon-wrapper {
   color: var(--main-orange-color);
}
.col-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 18px;
}
.edit-log-btn, .delete-log-btn {
   font-size: 20px;
   color: var(--main-orange-color);
   cursor: pointer;
}
.edit-log-btn:hover {
   color: var(--orange-hover-color);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
}
.delete-log-btn:hover {
   color: red;
   transition: all 0.3s ease-in-out;
}
/* End Table styling */

/* Form styling */
#entry-form-container {
   position: absolute;
   top: 0px;
   right: calc(0px - 430px);
   width: 425px;
   height: max-content;
   border-radius: 4px;
   box-shadow: 0px 5px 8px 4px rgba(0,0,0,0.19);
   -webkit-box-shadow: 0px 5px 8px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 5px 8px 4px rgba(0,0,0,0.19);
   transition: all 0.3s ease-in-out;
   display: none;
}

.open-form-container {
   right: 0px;
   animation: formSlideOut cubic-bezier(0.01,0.04,0.07,1.67) 0.5s;
   animation-fill-mode: forwards;
   opacity: 0;
}
@keyframes formSlideOut {
   0% {
      right: calc(0px - 430px);
      opacity: 0;
   }
   50% {
      opacity: 0.5;
   }
   100% {
      right: 0px;
      opacity: 1;
   }
}
#entry-form {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   width: 100%;
   height: max-content;
   padding: 20px;
   background-color: var(--main-white-color);
   /* overflow-y: scroll; */
}
.form-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   background-color: var(--main-black-color);
   padding: 20px;
}
.form-header > h1 {
   font-size: 20px;
   color: var(--main-white-color);
}
#close-form-btn {
   font-size: 20px;
   color: var(--light-grey-color1);
   background: transparent;
   border: none;
   cursor: pointer;
}
#close-form-btn:hover {
   color: red;
   transition: all 0.3s ease-in-out;
}
.form-control {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
   padding: 15px;
   width: 100%;
}
label {
   width: 100%;
}
/* HIDE NUMBER INPUTS UP/DOWN ARROWS */
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}
/* END HIDE NUMBER INPUTS UP/DOWN ARROWS */
input, textarea, select {
   border: 1px solid var(--light-grey-color2);
   background-color: var(--light-grey-color1);
   border-radius: 2px;
   padding: 5px 10px;
   height: 50px;
}
input::placeholder, textarea::placeholder, select::placeholder {
   color: rgba(158, 158, 158, 0.5);
   font-weight: 500;
}
input:focus, input[type=number]:focus, input[type=text]:focus,  input[type=email]:focus, input[type=date]:focus, textarea:focus, select:focus {
   border: 2px solid #4aa5eb;
   outline: none;
   box-shadow: 0 0 4px 1px rgba(74, 165, 235, 0.8);
}
#equipment-description-input {
   width: 100%;
}
#service-description {
   width: 100%; 
   height: 80px;
}
#submit-button {
   padding: 15px 0;
   border-radius: 2px;
   border: none;
   color: var(--main-white-color);
   font-weight: 600;
   font-size: 18px;
   background-color: var(--main-orange-color);
   width: 100%;
}
#submit-button:hover {
   background-color: var(--orange-hover-color);
   transition: all 0.3s ease-in-out;
}
/* End form styling */

/* START FOOTER STYLING */
footer {
   /* position: fixed;
   bottom: 0px; */
   width: 100%;
   height: 50px;
   background-color: var(--main-black-color);
}
.footer-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 100%;
   padding: 20px;
}
.footer-col {
   font-size: 14px;
   color: var(--main-white-color);
}
/* ENDT FOOTER STYLING */


/* Responsive Styling */
@media screen and (max-width: 800px) {
   body {
      height: 100vh;
   }
   .page-title > h1 {
      font-size: 1rem;
   }
   #search-container {
      justify-content: center;
   }
   .search-bar-wrapper {
      width: 100%;
   }
   #search-input {
      padding-right: 140px;
      width: 100%;
   }
   #new-form-btn {
      width: 95%;
   }
   /* #entry-form-container {
      min-height: 100%;
   } */
   .form-header > h1 {
      padding-left: 10px;
   }
   #entry-form-container {
      width: 100%;
   }
}
/* End Responsive Styling */

